// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/emoji/components/AddEmoji should match snapshot 1`] = `
<div>
  <div
    class="backstage-content row"
  >
    <div
      class="backstage-header"
    >
      <h1>
        <a
          href="/undefined/emoji"
        >
          Custom Emoji
        </a>
        <span
          class="backstage-header__divider"
        >
          <i
            class="fa fa-angle-right"
            title="Breadcrumb Icon"
          />
        </span>
        Add
      </h1>
    </div>
    <div
      class="backstage-form"
    >
      <form
        class="form-horizontal"
      >
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="name"
          >
            Name
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="name"
              maxlength="64"
              type="text"
              value=""
            />
            <div
              class="form__help"
            >
              Specify an emoji name that's up to 64 characters. It can contain lowercase letters, numbers, and the symbols '-', '+' and '_'.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="image"
          >
            Image
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <div>
              <div
                class="add-emoji__upload"
              >
                <button
                  class="btn btn-primary"
                >
                  Select
                </button>
                <input
                  accept=".jpeg,.jpg,.png,.gif"
                  id="select-emoji"
                  type="file"
                />
              </div>
              <div
                class="form__help"
              >
                Specify a .gif, .png, or .jpg file for your emoji. The file can be up to 512 KiB. The dimensions are resized automatically to 128 pixels by 128 pixels while maintaining the aspect ratio.
              </div>
            </div>
          </div>
        </div>
        <div
          class="backstage-form__footer"
        >
          <a
            class="btn btn-tertiary"
            href="/undefined/emoji"
          >
            Cancel
          </a>
          <button
            class="btn btn-primary"
            data-testid="save-button"
            type="submit"
          >
            Save
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/emoji/components/AddEmoji should select a file and match snapshot 1`] = `
<div>
  <div
    class="backstage-content row"
  >
    <div
      class="backstage-header"
    >
      <h1>
        <a
          href="/undefined/emoji"
        >
          Custom Emoji
        </a>
        <span
          class="backstage-header__divider"
        >
          <i
            class="fa fa-angle-right"
            title="Breadcrumb Icon"
          />
        </span>
        Add
      </h1>
    </div>
    <div
      class="backstage-form"
    >
      <form
        class="form-horizontal"
      >
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="name"
          >
            Name
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="name"
              maxlength="64"
              type="text"
              value=""
            />
            <div
              class="form__help"
            >
              Specify an emoji name that's up to 64 characters. It can contain lowercase letters, numbers, and the symbols '-', '+' and '_'.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="image"
          >
            Image
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <div>
              <div
                class="add-emoji__upload"
              >
                <button
                  class="btn btn-primary"
                >
                  Select
                </button>
                <input
                  accept=".jpeg,.jpg,.png,.gif"
                  id="select-emoji"
                  type="file"
                />
              </div>
              <span
                class="add-emoji__filename"
              >
                emoji.png
              </span>
              <div
                class="form__help"
              >
                Specify a .gif, .png, or .jpg file for your emoji. The file can be up to 512 KiB. The dimensions are resized automatically to 128 pixels by 128 pixels while maintaining the aspect ratio.
              </div>
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="preview"
          >
            Preview
          </label>
          <div
            class="col-md-5 col-sm-8 add-emoji__preview"
          >
            This is a sentence with 
            <span
              class="emoticon"
              style="background-image: url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEgAAABICAYAAABV7bNHAAAABmJLR0QA/wD/AP+gvaeTAAAACXBIWXMAABYlAAAWJQFJUiTwAAAAB3RJTUUH4AcXEyomBnhW6AAAAm9JREFUeNrtnL9vEmEcxj9cCDUSIVhNgGjaTUppOmjrX1BNajs61n+hC5MMrQNOLE7d27GjPxLs0JmSDk2VYNLBCw0yCA0mOBATHXghVu4wYeHCPc94711y30/e732f54Y3sLBbxEUxYAtYA5aB+0yXasAZcAQcAFdON1kuD+eBBvAG2JhCOJiaNkyNDVPzfwGlgBPgJRDCPwqZmk8MA0dAKeAjsIJ/tWIYpJwA7U9pK43Tevv/Asr7fOc47aR8H1AMyIrJkLJAzDKjPCQejh/uLcv4HMlZa5YxgZKzli1NrtETzRKD0RIgARIgARIgARIgAfKrgl54iUwiwrOlOHOzYQDsZof35w0+ffshQJlEhJ3NxWvX7t66waP5WV69/TxxSBNvsecP74215htA83fCrmv9lvM1oJsh9y4PzwQFqFJvj7XmG0AfzhtjrfkGUMlusXd8gd3sDK7ZzQ57xxeU7NbEAQUWdou/ZQflpAVIgPycxR7P3WbdZLHwTJBKvc3h6aUnspjlBTjZpw9IJ6MDY5hORtnZXCSTiAjQ+lJcWWyU0smostjYJi2gKTYyb3393hGgUXnr8PRSgEp2i0LxC5V6m5/dX4Nd5YW/iZ7xQSW75YlgKictQAKkLKYspiymLKYspiymLKYspiymLCYnraghQAIkCZAACZAACZDHAdWEwVU1i94RMZKzzix65+dIzjqy6B0u1BWLIXWBA4veyUsF8RhSAbjqT7EcUBaTgcqGybUx/0ITrTe5DIshH1QFnvh8J5UNg6qbUawCq8Brn324u6bm1b/hjHLSOSAObAPvprT1aqa2bVNrzemmPw4OwJf+E7QCAAAAAElFTkSuQmCC\\");"
            />
             in it.
          </div>
        </div>
        <div
          class="backstage-form__footer"
        >
          <a
            class="btn btn-tertiary"
            href="/undefined/emoji"
          >
            Cancel
          </a>
          <button
            class="btn btn-primary"
            data-testid="save-button"
            type="submit"
          >
            Save
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/emoji/components/AddEmoji should update emoji name and match snapshot 1`] = `
<div>
  <div
    class="backstage-content row"
  >
    <div
      class="backstage-header"
    >
      <h1>
        <a
          href="/undefined/emoji"
        >
          Custom Emoji
        </a>
        <span
          class="backstage-header__divider"
        >
          <i
            class="fa fa-angle-right"
            title="Breadcrumb Icon"
          />
        </span>
        Add
      </h1>
    </div>
    <div
      class="backstage-form"
    >
      <form
        class="form-horizontal"
      >
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="name"
          >
            Name
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <input
              class="form-control"
              id="name"
              maxlength="64"
              type="text"
              value="emojiName"
            />
            <div
              class="form__help"
            >
              Specify an emoji name that's up to 64 characters. It can contain lowercase letters, numbers, and the symbols '-', '+' and '_'.
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="control-label col-sm-4"
            for="image"
          >
            Image
          </label>
          <div
            class="col-md-5 col-sm-8"
          >
            <div>
              <div
                class="add-emoji__upload"
              >
                <button
                  class="btn btn-primary"
                >
                  Select
                </button>
                <input
                  accept=".jpeg,.jpg,.png,.gif"
                  id="select-emoji"
                  type="file"
                />
              </div>
              <div
                class="form__help"
              >
                Specify a .gif, .png, or .jpg file for your emoji. The file can be up to 512 KiB. The dimensions are resized automatically to 128 pixels by 128 pixels while maintaining the aspect ratio.
              </div>
            </div>
          </div>
        </div>
        <div
          class="backstage-form__footer"
        >
          <a
            class="btn btn-tertiary"
            href="/undefined/emoji"
          >
            Cancel
          </a>
          <button
            class="btn btn-primary"
            data-testid="save-button"
            type="submit"
          >
            Save
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
